--- a/neiroplant-new/css/style.css
+++ b/neiroplant-new/css/style.css
@@ -118,6 +118,10 @@ color: #01076D;
 
 }
 
+.container-1-ru {
+    background: url(../images/Group36.svg)no-repeat 75%/cover !important; 
+
+}
 .container-2_inner {
   width: 990px;
   margin: auto;
@@ -134,6 +138,16 @@ color: #01076D;
   height: 600px;
   background: url(../images/div01_photo_quote.png)no-repeat center/contain;
 }
+
+.container-4_inner-ru {
+    background: url(../images/div01_photo_quote11.png)no-repeat center/contain !important; 
+  }
+  .container-4_inner-2-ru {
+    background: url(../images/div01_photo_quote22.png)no-repeat center/contain !important; 
+  }
+  .container-4_inner-3-ru {
+    background: url(../images/div_01_photo_quote33.png)no-repeat center/contain !important; 
+  }
 
 .container-4_inner-2 {
   background: url(../images/div01_photo.png)no-repeat center/contain;
@@ -1122,7 +1136,7 @@ color: #00A79D;
 
 
 .lang b {
-  color: white;
+  /*color: white;*/
   text-decoration: underline;
 }
 .lang-dop {
@@ -1265,7 +1279,7 @@ font-family: 'MR';
   /*border: 1px solid #636363;*/
   /*padding: 5px;*/
   /*border-radius: 5px;*/
-  color: white !important;
+  /*color: white !important;*/
 }
 
 .navigation-menu a {
@@ -1669,6 +1683,9 @@ ol {
 
 
 @media screen and (max-width: 1024px) {
+  .lang b {
+    color: #4F4F4F;
+  }
   .vft {
   flex-direction: column;
   align-items: center;
@@ -1710,7 +1727,7 @@ ol {
   }
   .container-1 {
     height: 500px;
-    background: url(../images/fon_color_frame011.svg)no-repeat top/contain; 
+    background: url(../images/fon_color_frame011.svg)no-repeat top/contain !important; 
     padding: 0;
   }
   .container-2_inner-2 .container-2_plate {
@@ -1731,6 +1748,15 @@ ol {
     width: 100%;
     height: 880px;
     background: url(../images/div01_photo_quote1.png)no-repeat center/contain; 
+  }
+  .container-4_inner-ru {
+    background: url(../images/div01_photo_quote111.png)no-repeat center/contain !important; 
+  }
+  .container-4_inner-2-ru {
+    background: url(../images/div01_photo_quote222.png)no-repeat center/contain !important; 
+  }
+  .container-4_inner-3-ru {
+    background: url(../images/div_01_photo_quote333.png)no-repeat center/contain !important; 
   }
   .container-4_inner-2 {
     background: url(../images/div01_photo_quote2.png)no-repeat center/contain; 
