admin page graph corrections

--- a/neiroplant-new/css/style.css
+++ b/neiroplant-new/css/style.css
@@ -255,7 +255,7 @@ font-family: 'MR';
     justify-content: space-between;
   }
   .vita-footer_text {
-    font-family: "Helvetica";
+    font-family: "MR";
     font-size: 14px;
     line-height: 18px;
     text-align: center;
