admin page graph corrections

--- a/neiroplant-new/css/style.css
+++ b/neiroplant-new/css/style.css
@@ -1910,7 +1910,7 @@ ol {
   }
   .container-5_plate {
     height: 150px;
-    margin: 0 20px;
+    margin-bottom: 50px;
     width: 87%;
     background: url(../images/Group32.svg)no-repeat center/contain; 
   }
