--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -137,6 +137,92 @@ div {
 
 /* DENT */
 
+.product-body_img1 {
+  background: url(../images/product1.jpg)no-repeat center/contain !important;
+}
+.product-body_img2 {
+  background: url(../images/product2.jpg)no-repeat center/contain !important;
+}
+.product-body_img3 {
+  background: url(../images/product3.jpg)no-repeat center/contain !important;
+}
+.product-body_img4 {
+  background: url(../images/product4.jpg)no-repeat center/contain !important;
+}
+.product-body_img5 {
+  background: url(../images/product5.jpg)no-repeat center/contain !important;
+}
+.product-body_img6 {
+  background: url(../images/product6.jpg)no-repeat center/contain !important;
+}
+.product-body_img7 {
+  background: url(../images/product7.jpg)no-repeat center/contain !important;
+}
+.product-body_img8 {
+  background: url(../images/product8.jpg)no-repeat center/contain !important;
+}
+.product-body_img9 {
+  background: url(../images/product9.jpg)no-repeat center/contain !important;
+}
+.product-body_img10 {
+  background: url(../images/product10.jpg)no-repeat center/contain !important;
+}
+.product-body_img11 {
+  background: url(../images/product11.jpg)no-repeat center/contain !important;
+}
+.product-body_img12 {
+  background: url(../images/product12.jpg)no-repeat center/contain !important;
+}
+.product-body_img13 {
+  background: url(../images/product13.jpg)no-repeat center/contain !important;
+}
+.product-body_img14 {
+  background: url(../images/product14.jpg)no-repeat center/contain !important;
+}
+
+.static-main-img1 {
+  background: url(../images/img1.jpg)no-repeat center/contain !important;
+}
+.static-main-img2 {
+  background: url(../images/img2.jpg)no-repeat center/contain !important;
+}
+.static-main-img3 {
+  background: url(../images/img3.jpg)no-repeat center/contain !important;
+}
+.static-main-img4 {
+  background: url(../images/img4.jpg)no-repeat center/contain !important;
+}
+.static-main-img5 {
+  background: url(../images/img5.jpg)no-repeat center/contain !important;
+}
+.static-main-img6 {
+  background: url(../images/img6.jpg)no-repeat center/contain !important;
+}
+.static-main-img7 {
+  background: url(../images/img7.jpg)no-repeat center/contain !important;
+}
+.static-main-img8 {
+  background: url(../images/img8.jpg)no-repeat center/contain !important;
+}
+.static-main-img9 {
+  background: url(../images/img9.jpg)no-repeat center/contain !important;
+}
+.static-main-img10 {
+  background: url(../images/img10.jpg)no-repeat center/contain !important;
+}
+.static-main-img11 {
+  background: url(../images/img11.jpg)no-repeat center/contain !important;
+}
+.static-main-img12 {
+  background: url(../images/img12.jpg)no-repeat center/contain !important;
+}
+.static-main-img13 {
+  background: url(../images/img13.jpg)no-repeat center/contain !important;
+}
+.static-main-img14 {
+  background: url(../images/img14.jpg)no-repeat center/contain !important;
+}
+
 .product-body_left-wrapper {
   width: 398px;
 }
