--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -137,6 +137,11 @@ div {
 
 /* DENT */
 
+.pre-text {
+  position: relative;
+  top: -30px;
+}
+
 .product-body_img1 {
   background: url(../images/product1.jpg)no-repeat center/contain !important;
 }
