--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -2146,9 +2146,15 @@ button {
     display: block;
   }
 
+  .footer-year-mob {
+    display: none;
+  }
+
   
 
 @media screen and (max-width: 1024px) {
+
+  
 
   .pre-text {
     top: -10px;
