--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -544,7 +544,7 @@ h4 {
 }
 
 .container-1 {
-  margin-top: 60px;
+  margin-top: 120px;
   margin-bottom: 120px;
 }
 
@@ -622,47 +622,47 @@ h4 {
 .production_plate-img {
   width: 100%;
   height: 200px;
-  background: url(../images/product1.jpg)no-repeat center/contain;
+  background: url(../images/product1.jpg)no-repeat center/cover;
   margin-bottom: 20px;
 }
 .production_plate:nth-child(2) .production_plate-img {
-  background: url(../images/product2.jpg)no-repeat center/contain;
+  background: url(../images/product2.jpg)no-repeat center/cover;
 }
 .production_plate:nth-child(3) .production_plate-img {
-  background: url(../images/product3.jpg)no-repeat center/contain;
+  background: url(../images/product3.jpg)no-repeat center/cover;
 }
 .production_plate:nth-child(4) .production_plate-img {
-  background: url(../images/product4.jpg)no-repeat center/contain;
+  background: url(../images/product4.jpg)no-repeat center/cover;
 }
 .production_plate:nth-child(5) .production_plate-img {
-  background: url(../images/product5.jpg)no-repeat center/contain;
+  background: url(../images/product5.jpg)no-repeat center/cover;
 }
 .production_plate:nth-child(6) .production_plate-img {
-  background: url(../images/product6.jpg)no-repeat center/contain;
+  background: url(../images/product6.jpg)no-repeat center/cover;
 }
 .production_plate:nth-child(7) .production_plate-img {
-  background: url(../images/product7.jpg)no-repeat center/contain;
+  background: url(../images/product7.jpg)no-repeat center/cover;
 }
 .production_plate:nth-child(8) .production_plate-img {
-  background: url(../images/product8.jpg)no-repeat center/contain;
+  background: url(../images/product8.jpg)no-repeat center/cover;
 }
 .production_plate:nth-child(9) .production_plate-img {
-  background: url(../images/product9.jpg)no-repeat center/contain;
+  background: url(../images/product9.jpg)no-repeat center/cover;
 }
 .production_plate:nth-child(10) .production_plate-img {
-  background: url(../images/product10.jpg)no-repeat center/contain;
+  background: url(../images/product10.jpg)no-repeat center/cover;
 }
 .production_plate:nth-child(11) .production_plate-img {
-  background: url(../images/product11.jpg)no-repeat center/contain;
+  background: url(../images/product11.jpg)no-repeat center/cover;
 }
 .production_plate:nth-child(12) .production_plate-img {
-  background: url(../images/product12.jpg)no-repeat center/contain;
+  background: url(../images/product12.jpg)no-repeat center/cover;
 }
 .production_plate:nth-child(13) .production_plate-img {
-  background: url(../images/product13.jpg)no-repeat center/contain;
+  background: url(../images/product13.jpg)no-repeat center/cover;
 }
 .production_plate:nth-child(14) .production_plate-img {
-  background: url(../images/product14.jpg)no-repeat center/contain;
+  background: url(../images/product14.jpg)no-repeat center/cover;
 }
 .production_plate:nth-child(15)  {
   box-shadow: none;
