--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -612,7 +612,7 @@ h4 {
 
 
 .production_plate {
-  width: 24%;
+  width: 236px;
   height: 386px;
   box-shadow: 3px 2px 4px -2px rgba(34, 60, 80, 0.2);
   margin-bottom: 80px;
