--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -720,6 +720,7 @@ h4 {
 .container-2_plate .title {
   font-family: 'MB';
   margin-bottom: 10px;
+  padding-left: 0 !important;
 }
 .container-2_plate {
   width: 260px;
@@ -727,6 +728,10 @@ h4 {
   padding: 20px 0;
   border-top: 1px solid #AFAFAF;
   /* border-bottom: 1px solid #AFAFAF; */
+}
+
+.container-2_plate p {
+  margin-bottom: 15px;
 }
 
 .container-2_plates {
