--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -886,6 +886,7 @@ h4 {
     justify-content: flex-end;
     position: relative;
     background-color: white;
+    box-shadow: 0 5px 11px 0 rgb(0 0 0 / 25%);
 }
 
 .logo-container {
