--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -186,46 +186,46 @@ div {
 }
 
 .static-main-img1 {
-  background: url(../images/img1.jpg)no-repeat center/contain !important;
+  background: url(../images/img1.jpg)no-repeat bottom/150% !important;
 }
 .static-main-img2 {
-  background: url(../images/img2.jpg)no-repeat center/contain !important;
+  background: url(../images/img2.jpg)no-repeat bottom/150% !important;
 }
 .static-main-img3 {
-  background: url(../images/img3.jpg)no-repeat center/contain !important;
+  background: url(../images/img3.jpg)no-repeat bottom/150% !important;
 }
 .static-main-img4 {
-  background: url(../images/img4.jpg)no-repeat center/contain !important;
+  background: url(../images/img4.jpg)no-repeat bottom/150% !important;
 }
 .static-main-img5 {
-  background: url(../images/img5.jpg)no-repeat center/contain !important;
+  background: url(../images/img5.jpg)no-repeat bottom/150% !important;
 }
 .static-main-img6 {
-  background: url(../images/img6.jpg)no-repeat center/contain !important;
+  background: url(../images/img6.jpg)no-repeat bottom/150% !important;
 }
 .static-main-img7 {
-  background: url(../images/img7.jpg)no-repeat center/contain !important;
+  background: url(../images/img7.jpg)no-repeat bottom/150% !important;
 }
 .static-main-img8 {
-  background: url(../images/img8.jpg)no-repeat center/contain !important;
+  background: url(../images/img8.jpg)no-repeat bottom/150% !important;
 }
 .static-main-img9 {
-  background: url(../images/img9.jpg)no-repeat center/contain !important;
+  background: url(../images/img9.jpg)no-repeat bottom/150% !important;
 }
 .static-main-img10 {
-  background: url(../images/img10.jpg)no-repeat center/contain !important;
+  background: url(../images/img10.jpg)no-repeat bottom/150% !important;
 }
 .static-main-img11 {
-  background: url(../images/img11.jpg)no-repeat center/contain !important;
+  background: url(../images/img11.jpg)no-repeat bottom/150% !important;
 }
 .static-main-img12 {
-  background: url(../images/img12.jpg)no-repeat center/contain !important;
+  background: url(../images/img12.jpg)no-repeat bottom/150% !important;
 }
 .static-main-img13 {
-  background: url(../images/img13.jpg)no-repeat center/contain !important;
+  background: url(../images/img13.jpg)no-repeat bottom/150% !important;
 }
 .static-main-img14 {
-  background: url(../images/img14.jpg)no-repeat center/contain !important;
+  background: url(../images/img14.jpg)no-repeat bottom/150% !important;
 }
 
 .product-body_left-wrapper {
@@ -938,7 +938,7 @@ h4 {
 }
 
 .navigation-menu a {
-  margin-right: 20px;
+  margin-right: 40px;
   text-transform: uppercase;
   color: black;
   font-size: 12px;
@@ -1474,6 +1474,7 @@ h3 {
 
 
 .static-main-img {
+  margin-top: 50px;
   width: 100%;
   height: 440px;
   background: url('../images/img2.jpg')no-repeat center/contain; 
