--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -244,9 +244,12 @@ div {
 
 
 .close-popup {
-  width: 200px;
+  position: relative;
+  top: 15%;
+  left: 67%;
+  width: 50px;
   margin-right: 40px;
-    height: 56px;
+    height: 50px;
     background: #0C499A;
     color: white;
     font-size: 18px;
@@ -259,21 +262,41 @@ div {
     border: none;
 }
 
+.close-popup::after {
+  content: '';
+  width: 20px;
+  height: 20px;
+  /* margin-left: 20px; */
+  background: url(../images/cross.svg)no-repeat center/contain;
+}
+
 .popup-body {
+  width: 386px;
+  margin: auto;
   background: white;
   padding: 30px;
+  margin-top: 5%;
 }
 
 .popup-open {
   position: absolute;
-  overflow: hidden;
   display: none;
   margin: auto;
-    top: 10%;
-    width: 100vw;
-    height: 100vw;
-    z-index: 2;
-    background: black;
+  top: 7%;
+  width: 100vw;
+  height: 100vh;
+  overflow-y: hidden;
+  z-index: 2;
+  background: rgba(0, 0, 0, .7);
+}
+
+.popup-open .form-top {
+  flex-wrap: nowrap;
+  flex-direction: column;
+}
+
+.popup-open .content-container .inp {
+  width: 90%;
 }
 
 
@@ -444,8 +467,9 @@ h4 {
 }
 
 .product-body_left-btn {
-  border: 1px solid #AFAFAF;
-  color: #0C499A;
+  /* border: 1px solid #0C499A; */
+  color: white;
+  background-color: #0C499A;
   padding: 10px 20px;
   font-size: 16px;
   line-height: 26px;
@@ -2044,6 +2068,27 @@ button {
   margin: auto;
   justify-content: flex-end;
   margin-bottom: 140px;
+}
+.popup-open .button-container {
+  margin-bottom: 0px;
+  justify-content: end;
+}
+
+.popup-check {
+  margin-top: 10px;
+  display: flex;
+  margin-bottom: 15%;
+}
+
+.popup-check p {
+  /* width: 100px; */
+  font-size: 13px;
+  line-height: 14px;
+}
+
+.popup-check_inp {
+  margin-right: 20px;
+  width: 20px !important;
 }
 
 .content-container p {
