--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -250,7 +250,7 @@ div {
   width: 50px;
   margin-right: 40px;
     height: 50px;
-    background: #0C499A;
+    /* background: #0C499A; */
     color: white;
     font-size: 18px;
     line-height: 20px;
@@ -454,7 +454,7 @@ h4 {
 
 .product-body_inner {
   max-width: 996px;
-  min-height: 992px;
+  /* min-height: 992px; */
   margin: auto;
   display: flex;
   justify-content: space-between;
